Fixed word wrap issues in Chrome with commit message that contains list items.
Only when custom width is assigned Chrome breaks words.

--- a/themes/oxygen/css/theme.css
+++ b/themes/oxygen/css/theme.css
@@ -11938,6 +11938,11 @@ div[id^='wiki_'][id$='_no_links']
     text-align: right;
 }
 
+#viewissue_vcs_integration_commits .commentbody li
+{
+    width: 282px;
+}
+
 #viewissue_vcs_integration_commits .commitrepos
 {
     color: #AAA;
